--- a/index.html
+++ b/index.html
@@ -5,15 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./assets/png/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
-        <section class="memory-game">
-            <div class="game-field">
-                
+        <header class="header">
+            <div class="header__logo"></div>
+            <div class="header__title">Memory game</div>
+            <div class="header__logo"></div>
+        </header>
+        <div class="general">
+            <section class="memory-game">
+                <div class="game-field">
+                </div>
+                <div class="menu">
+                    <button class="menu__button menu__button-new-game">New game</button>
+                    <div class="menu__body">
+                        <p class="menu__body-timer">00:00</p>
+                        <p class="menu__body-score">0 point</p>
+                        <p class="menu__body-best-result">Best result:</p>
+                        <p class="menu__body-value-best-result">Will be first!</p>
+                    </div>
+                    <button class="menu__button menu__button-results">Results</button>
+                    <button class="menu__button"> 🕪 on</button>
+                </div>
+            </section>
+        </div>
+        <footer class="footer">
+                <div class="footer__data">
+                    <span>©</span>
+                    <span>2022</span>
+                    <span><a class="footer__link" href="https://github.com/ps0m" >github</a></span>
+                </div>
+                <div class="footer__school">
+                    <a class="footer__link" href="https://rs.school/js-stage0/">Rolling Scopes School</a>
+                </div>
             </div>
-        </section>
+        </footer>
     </div>
     <script src="./index.js"></script>
 </body>
