feat: add sound click and win

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <p class="menu__body-value-best-result">Will be first!</p>
                     </div>
                     <button class="menu__button menu__button-results">Results</button>
-                    <button class="menu__button"> 🕪 on</button>
+                    <button class="menu__button menu__button-sound menu__button-sound-on"> 🕪 on</button>
                 </div>
             </section>
         </div>
@@ -43,6 +43,21 @@
                 </div>
             </div>
         </footer>
+    </div>
+    <audio class="click-audio" src="./assets/mp3/click.mp3"></audio>
+    <audio class="win-audio" src="./assets/mp3/winSound.mp3"></audio>
+
+    <div class="popup">
+        <div class="popup__module">
+            <div class="popup__content">
+                <div class="popup__title">
+                    Results of the last 10 games
+                </div>
+                <div class="popup__text">
+                </div>
+                <a class="popup_close" href="#">✖</a>
+            </div>
+        </div>
     </div>
     <script src="./index.js"></script>
 </body>
