feat: add winner block

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
     <div class="popup">
         <div class="popup__module">
+            
             <div class="popup__content">
                 <div class="popup__title">
                     Results of the last 10 games
@@ -56,6 +57,9 @@
                 <div class="popup__text">
                 </div>
                 <a class="popup_close" href="#">✖</a>
+                <div class="winner">
+                    <div class="winner__text">You are Winner!</div>
+                </div>
             </div>
         </div>
     </div>
