fix: fix display button for mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                         <p class="menu__body-value-best-result">Will be first!</p>
                     </div>
                     <button class="menu__button menu__button-results">Results</button>
-                    <button class="menu__button menu__button-sound menu__button-sound-on">🕪 on</button>
+                    <div class="menu__button-sound-title">Volume</div>
+                    <button class="menu__button menu__button-sound menu__button-sound-on">on</button>
                 </div>
             </section>
         </div>
